# kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
app/kaleidoscope/: CMakeLists.txt  error.h  kaleidoscope.rc  main.cc  mirror.cc  model.h  pixel_shader.hlsl  render.cc  render.h  resource.h  tool.h  vertex_shader.hlsl  view.cc  view.h  viewmodel.h
apps/: CMakeLists.txt
apps/example/: CMakeLists.txt
include/kdenticon/internal/: archive.hpp  binary.hpp  cast.hpp  geometry.hpp  graphic.hpp  kdenticon.hpp  matrix.hpp  matrix_trait.hpp  pattern.hpp  scalar.hpp  scalar_trait.hpp  shape.hpp
projects/msvc141/: kdenticon.sln  kdenticon.vcxproj  kdenticon.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
projects/msvc142/: kdenticon.sln  kdenticon.vcxproj  kdenticon.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
src/: CMakeLists.txt
src/module/kdenticon/: condition.hpp  matrix.hpp  scalar.hpp  utility.hpp  value.hpp
src/module/test/: test.cpp
src/project/: cxxexe.props  cxxlib.props  kdenticon.sln  kdenticon.vcxproj  kdenticon.vcxproj.filters  test.vcxproj  test.vcxproj.filters
tests/: CMakeLists.txt  test_archive.cpp  test_cast.cpp  test_foo.cpp  test_graphic.cpp  test_main.cpp  test_martix.cpp  test_scalar.cpp
tests/core_tests/: CMakeLists.txt  test_martix.cpp  test_scalar.cpp
tests/functional_tests/: CMakeLists.txt  test_archive.cpp  test_cast.cpp  test_graphic.cpp
